# weggli-ruleset

./: Cargo.toml  README.md
src/: lib.rs  matcher.rs  reporting.rs  rule.rs
tests/: ls-main.c  objdump-disas.c
