[package]
name = "weggli-ruleset"
description = "Ruleset managment for weggli patterns"
authors = ["Sam L. Thomas <s@ghost.sh>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
nonempty = { version = "0.10", features = ["serialize"] }
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.0.12", package = "serde_yml" }
thiserror = "1"
tree-sitter = "0.24"
walkdir = "2"
weggli = { version = "0.2", package = "wegglix" }
