[package]
name = "weggli-ruleset"
version = "0.1.3"
authors = ["Sam L. Thomas <s@ghost.sh>"]
description = "Ruleset managment/matching/reporting for weggli patterns"
license = "MIT"
repository = "https://github.com/xorpse/weggli-ruleset.git"
edition = "2021"

[dependencies]
anyhow = "1"
nonempty = { version = "0.10", features = ["serialize"] }
memchr = "2.7"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = { version = "0.0.12", package = "serde_yml" }
thiserror = "1"
tree-sitter = "0.24"
walkdir = "2"
weggli = { version = "0.2", package = "wegglix" }
